--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-HalifaxKernel_v1.1"
+CONFIG_LOCALVERSION="-HalifaxKernel_v1.3"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -710,6 +710,7 @@ CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_LZ4=y
+# CONFIG_CRYPTO_LZ4HC is not set
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
@@ -730,3 +731,5 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
