--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-HalifaxKernel_v1.5"
+CONFIG_LOCALVERSION="-HalifaxKernel_v1.8"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -91,6 +91,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PIXUTIL=y
@@ -735,3 +736,12 @@ CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_SUSPEND=y
+CONFIG_SUSPEND_FREEZER=y
+CONFIG_WAKELOCK=y
+CONFIG_PM_SLEEP=y
+CONFIG_PM_SLEEP_SMP=y
+CONFIG_POWERSUSPEND=y
+CONFIG_POWERSUSPEND_DEBUG=y
+CONFIG_MSM_PRESERVE_MEM=y
+CONFIG_IOSCHED_ANXIETY=y
