--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-HalifaxKernel_v1.9"
+CONFIG_LOCALVERSION="-HalifaxKernel_v2.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -744,3 +744,4 @@ CONFIG_PM_SLEEP_SMP=y
 CONFIG_POWERSUSPEND=y
 CONFIG_POWERSUSPEND_DEBUG=y
 CONFIG_IOSCHED_ANXIETY=y
+CONFIG_VM_MAX_READAHEAD=128
