--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-HalifaxKernel_v2.6"
+CONFIG_LOCALVERSION="-HalifaxKernel_v2.7"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -815,3 +815,6 @@ CONFIG_POWERSUSPEND_DEBUG=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_VM_MAX_READAHEAD=128
 CONFIG_WIREGUARD=y
+CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_NETFILTER_XT_TARGET_HMARK=y
+CONFIG_IP_NF_TARGET_TTL=y
