--- a/arch/arm64/configs/tissot_defconfig
+++ b/arch/arm64/configs/tissot_defconfig
@@ -818,3 +818,4 @@ CONFIG_WIREGUARD=y
 CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_NETFILTER_XT_TARGET_HMARK=y
 CONFIG_IP_NF_TARGET_TTL=y
+CONFIG_VOLTAGE_CONTROL=y
